--- a/HospitalSystem.Infrastructure/HospitalSystem.Infrastructure.csproj
+++ b/HospitalSystem.Infrastructure/HospitalSystem.Infrastructure.csproj
@@ -1,9 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <!-- Change this to net10.0 to use the .NET 10 runtime -->
     <TargetFramework>net10.0</TargetFramework>
+    
+    <!-- Explicitly setting C# 14 (optional, as net10.0 defaults to it) -->
+    <LangVersion>14.0</LangVersion>
+
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- Recommended: Update your program versioning here as well -->
+    <Version>1.0.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <!-- Update your package versions to the 10.x series for .NET 10 compatibility -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HospitalSystem.Application\HospitalSystem.Application.csproj" />
+    <ProjectReference Include="..\HospitalSystem.Domain\HospitalSystem.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
